# peek

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: python-package.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
peek/: __init__.py  ast.py  capture.py  cli.py  clients.py  commands.py  common.py  completer.py  completions.py  config.py  connection.py  display.py  errors.py  history.py  key_bindings.py  krb.py  lex.py  lexers.py  names.py  natives.py  oidc.py  parser.py  peek.py  peekapp.py  peekrc  saml.py  variables.py  visitors.py  vm.py
peek/certs/: cert.pem  key.pem
peek/es_api_spec/: api_completer.py  completer.py  kspec.py  kspec_js.py  kspec_json.py  schema.py  spec.py  spec_js.py  spec_json.py
peek/js_spec/: spec_builder.py
peek/spec_adaptor/: adaptor.py  evaluator.py
scripts/: alias.sh  shell_peek.sh  specs-for-ci.sh
tests/: __init__.py  payload.json  specs.es  test_adaptor.py  test_completer.py  test_completions.py  test_connection.py  test_display.py  test_key_bindings.py  test_lexer.py  test_lexers.py  test_natives.py  test_parser.py  test_peek.py  test_peekapp.py  test_schema_completer.py  test_visitors.py  test_vm.py
tests/es_api_spec/: test_spec.py  test_spec_builder.py  test_spec_js.py
tests/js_spec/: test_spec_builder.py
