[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "es-peek"
dynamic = ["version"]
description = "Peek into elasticsearch clusters"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.rst"]
requires-python = ">=3.10"
authors = [
    { name = "Yang Wang", email = "ywangd@gmail.com" },
]
keywords = [
    "cli",
    "elasticsearch",
    "peek",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "configobj~=5.0.6",
    "elastic-transport~=8.12.0",
    "keyring~=23.5.0",
    "prompt-toolkit~=3.0.29",
    "Pygments~=2.11.2",
    "urllib3~=1.26.9",
]

[project.optional-dependencies]
full = [
    "kerberos~=1.3.1",
    "pyperclip~=1.8.2",
]

[project.scripts]
peek = "peek.cli:main"

[project.urls]
Homepage = "https://github.com/ywangd/peek"

[tool.hatch.version]
path = "peek/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "peek",
    "docs",
    "README.rst",
    "HISTORY.rst",
    "CONTRIBUTING.rst",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
  { path = "README.rst" },
  { text = "\n" },
  { path = "HISTORY.rst" },
]

[tool.hatch.build.targets.wheel]
packages = ["peek"]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "black"
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/sneaky tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.usort]

