[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "es-peek"
dynamic = ["version"]
description = "Peek into elasticsearch clusters"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.rst"]
requires-python = ">=3.10"
authors = [
    { name = "Yang Wang", email = "ywangd@gmail.com" },
]
keywords = [
    "cli",
    "elasticsearch",
    "peek",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "configobj~=5.0.6",
    "elastic-transport~=9.2.1",
    "keyring~=25.7.0",
    "prompt-toolkit~=3.0.52",
    "Pygments~=2.13.0",  # 2.14.0 breaks the parser
    "urllib3~=2.6.3",
]

[project.optional-dependencies]
full = [
    "kerberos~=1.3.1",
    "pyperclip~=1.11.0",
]

[dependency-groups]
dev = [
    "wheel==0.45.1",
    "flake8==7.3.0",
    "tox==4.34.1",
    "coverage==7.13.1",
    "Sphinx==7.1.2",  # blocked by pygments 2.13.0
    "watchdog==6.0.0",  # for serving docs
    "twine==6.2.0",
    "build==1.4.0",
    "pytest==9.0.2",
]

[project.scripts]
peek = "peek.cli:main"

[project.urls]
Homepage = "https://github.com/ywangd/peek"

[tool.hatch.version]
path = "peek/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "peek",
    "docs",
    "README.rst",
    "HISTORY.rst",
    "CONTRIBUTING.rst",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
  { path = "README.rst" },
  { text = "\n" },
  { path = "HISTORY.rst" },
]

[tool.hatch.build.targets.wheel]
packages = ["peek"]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "black"
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/sneaky tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.usort]

